--- a/files/conf/log4j.properties
+++ b/files/conf/log4j.properties
@@ -110,6 +110,8 @@ hadoop.metrics.log.level=INFO
 #log4j.logger.org.apache.hadoop.mapred.JobTracker=DEBUG
 #log4j.logger.org.apache.hadoop.mapred.TaskTracker=DEBUG
 #log4j.logger.org.apache.hadoop.fs.FSNamesystem=DEBUG
+log4j.logger.org.apache.hadoop.fs.FSNamesystem=WARN
+log4j.logger.org.apache.hadoop.hdfs.StateChange=WARN
 log4j.logger.org.apache.hadoop.metrics2=${hadoop.metrics.log.level}
 
 # Jets3t library
